--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://Sriramkk123.github.io/Covid-19-Tracker",
+  "homepage": "http://sriramkk123.github.io/Covid-19-Tracker/",
   "name": "covid-tracker",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
