--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sriramkk123.github.io/Covid-19-Tracker/",
+  "homepage": "https://Sriramkk123.github.io/Covid-19-Tracker/",
   "name": "covid-tracker",
   "version": "0.1.0",
   "dependencies": {
